<resources>
    <string name="app_name">Rock Paper Scissor</string>
    <string name="title">Rock Paper Scissors</string>
    <string name="playerOne">Player One</string>
    <string name="playerTwo">Player Two</string>
    <string name="choose">Choose one of the following</string>
    <string name="rock">Rock</string>
    <string name="paper">Paper</string>
    <string name="scissors">Scissors</string>
    <string name="button">Restart Game</string>
    <string name="scoreOne">Player One\'s Total Score:</string>
    <string name="scoreTwo">Player Two\'s Total Score:</string>
    <string name="message">It\'s always hard to beat me. Can you do it?</string>
    <string name="playButton">Ready to play?</string>
    <string name="frontTitle">Welcome!</string>
    <string name="instructions">Playing First Time?</string>
    <string name="onBoardingScreenTitle">It is time to learn to be the best!</string>
    <string name="onBoardingScreenOne">Let\'s Get Started</string>
    <string name="bestScoreTitle">Best Score</string>
    <string name="messageForComputer">Computer Won! Better luck for next time!</string>
    <string name="messageForPlayer">Congratulations! You Won!</string>
</resources>