<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GameActivity">

  <TextView
      android:id="@+id/textView"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="16dp"
      android:layout_marginTop="5dp"
      android:text="@string/title"
      android:textColor="#20AAE3"
      android:textSize="40sp"
      android:textStyle="bold"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <ImageView
      android:id="@+id/imageView"
      android:layout_width="0dp"
      android:layout_height="0dp"
      android:layout_marginStart="16dp"
      android:layout_marginEnd="169dp"
      android:background="@drawable/round_corner"
      app:layout_constraintBottom_toBottomOf="@+id/imageView2"
      app:layout_constraintEnd_toStartOf="@+id/imageView2"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="@+id/imageView2"
      app:srcCompat="@drawable/question" />

  <ImageView
      android:id="@+id/imageView2"
      android:layout_width="0dp"
      android:layout_height="100dp"
      android:layout_marginTop="13dp"
      android:layout_marginEnd="24dp"
      android:background="@drawable/round_corner"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toEndOf="@+id/imageView"
      app:layout_constraintTop_toBottomOf="@+id/textView3"
      app:srcCompat="@drawable/question" />

  <TextView
      android:id="@+id/textView2"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="21dp"
      android:layout_marginTop="13dp"
      android:text="@string/playerOne"
      android:textColor="#FDFDFD"
      android:textSize="20sp"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/textView" />

  <TextView
      android:id="@+id/textView3"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="13dp"
      android:text="@string/playerTwo"
      android:textColor="#FFFFFF"
      android:textSize="20sp"
      app:layout_constraintEnd_toEndOf="@+id/textView"
      app:layout_constraintTop_toBottomOf="@+id/textView" />

  <ImageButton
      android:id="@+id/imageButton"
      android:layout_width="0dp"
      android:layout_height="0dp"
      android:layout_marginStart="16dp"
      android:layout_marginEnd="39dp"
      android:background="@drawable/round_corner_one"
      android:contentDescription="@string/rock"
      app:layout_constraintBottom_toBottomOf="@+id/imageButton2"
      app:layout_constraintEnd_toStartOf="@+id/imageButton2"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="@+id/imageButton2"
      app:srcCompat="@mipmap/rock" />

  <ImageButton
      android:id="@+id/imageButton2"
      android:layout_width="0dp"
      android:layout_height="100dp"
      android:layout_marginEnd="32dp"
      android:layout_marginBottom="53dp"
      android:background="@drawable/round_corner_one"
      android:contentDescription="@string/paper"
      app:layout_constraintBottom_toTopOf="@+id/textView6"
      app:layout_constraintEnd_toStartOf="@+id/imageButton4"
      app:layout_constraintStart_toEndOf="@+id/imageButton"
      app:srcCompat="@mipmap/paper" />

  <ImageButton
      android:id="@+id/imageButton4"
      android:layout_width="0dp"
      android:layout_height="0dp"
      android:layout_marginEnd="24dp"
      android:background="@drawable/round_corner_one"
      android:contentDescription="@string/scissors"
      app:layout_constraintBottom_toBottomOf="@+id/imageButton2"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toEndOf="@+id/imageButton2"
      app:layout_constraintTop_toTopOf="@+id/imageButton2"
      app:srcCompat="@mipmap/scissors" />

  <Button
      android:id="@+id/button6"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginBottom="16dp"
      android:text="@string/button"
      android:textColor="#0097A7"
      android:textSize="20sp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:srcCompat="@drawable/my_button" />

  <TextView
      android:id="@+id/textView6"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="16dp"
      android:layout_marginBottom="29dp"
      android:text="@string/scoreOne"
      android:textColor="#FFFFFF"
      android:textSize="20sp"
      android:textStyle="bold"
      app:layout_constraintBottom_toTopOf="@+id/textView7"
      app:layout_constraintStart_toStartOf="parent" />

  <TextView
      android:id="@+id/textView7"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="16dp"
      android:layout_marginBottom="23dp"
      android:text="@string/scoreTwo"
      android:textColor="#FFFFFF"
      android:textSize="20sp"
      android:textStyle="bold"
      app:layout_constraintBottom_toTopOf="@+id/button6"
      app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>